CompilerAmpliation/src/parser/y.output
   0  $accept : final $end

   1  final : program

   2  program : program_body main

   3  program_body : program_body variable
   4               | program_body function
   5               |

   6  function : typed_function
   7           | void_function

   8  function_invocation : ID '(' listOfExpressions ')'
   9                      | ID '(' ')'

  10  typed_function : built_in_type ID '(' listOfParameters ')' '{' function_body '}'
  11                 | built_in_type ID '(' ')' '{' function_body '}'

  12  void_function : VOID ID '(' listOfParameters ')' '{' function_body '}'
  13                | VOID ID '(' ')' '{' function_body '}'

  14  main : VOID MAIN '(' ')' '{' function_body '}'

  15  function_body : listOfVariables listOfStatements

  16  listOfStatements : listOfStatements statement
  17                   |

  18  listOfParameters : listOfParameters ',' parameter
  19                   | parameter

  20  parameter : built_in_type ID
  21            | struct ID
  22            | array_creation ID

  23  statement : expression ';'
  24            | read ';'
  25            | write ';'
  26            | if_else
  27            | while
  28            | for
  29            | switch
  30            | do_while
  31            | return ';'

  32  expression : expression '+' expression
  33             | expression '*' expression
  34             | expression '/' expression
  35             | expression '-' expression
  36             | expression '%' expression
  37             | assignment
  38             | ternary
  39             | expression DOUBLEEQUALS expression
  40             | expression '>' expression
  41             | expression GEQ expression
  42             | expression '<' expression
  43             | expression LEQ expression
  44             | expression DIFFERENT expression
  45             | expression AND expression
  46             | expression OR expression
  47             | '-' expression
  48             | '!' expression
  49             | function_invocation
  50             | '(' expression ')'
  51             | expression '.' expression
  52             | cast
  53             | array
  54             | INT_CONSTANT
  55             | REAL_CONSTANT
  56             | CHAR_CONSTANT
  57             | ID

  58  if_else : IF '(' expression ')' body ELSE body
  59          | IF '(' expression ')' body

  60  ternary : expression '?' expression ':' expression

  61  body : '{' listOfStatements '}'
  62       | statement

  63  while : WHILE '(' expression ')' body

  64  do_while : DO body WHILE '(' expression ')'

  65  for : FOR '(' statement expression ';' assignment ')' body

  66  switch : SWITCH '(' expression ')' '{' switch_body '}'

  67  switch_body : switch_body case
  68              | case

  69  case : CASE expression ':' listOfStatements break
  70       | CASE expression ':' listOfStatements
  71       | DEFAULT ':' listOfStatements break
  72       | DEFAULT ':' listOfStatements

  73  break : BREAK ';'

  74  cast : '(' built_in_type ')' expression

  75  listOfExpressions : listOfExpressions ',' expression
  76                    | expression

  77  listOfIds : listOfIds ',' ID
  78            | ID

  79  built_in_type : CHAR
  80                | INT
  81                | DOUBLE

  82  array : expression '[' expression ']'

  83  array_creation : array_creation '[' INT_CONSTANT ']'
  84                 | built_in_type '[' INT_CONSTANT ']'
  85                 | struct '[' INT_CONSTANT ']'

  86  variable : built_in_type listOfIds ';'
  87           | array_creation listOfIds ';'
  88           | struct listOfIds ';'

  89  listOfVariables : listOfVariables variable
  90                  |

  91  assignment : expression '=' expression
  92             | expression INC
  93             | expression DEC
  94             | expression PLUSEQUALS expression
  95             | expression MINUSEQUALS expression
  96             | expression TIMESEQUALS expression
  97             | expression DIVIDEEQUALS expression

  98  read : READ listOfExpressions

  99  write : WRITE listOfExpressions

 100  struct : STRUCT '{' listOfVariables '}'

 101  return : RETURN expression

state 0
	$accept : . final $end  (0)
	program_body : .  (5)

	.  reduce 5

	final  goto 1
	program  goto 2
	program_body  goto 3


state 1
	$accept : final . $end  (0)

	$end  accept


state 2
	final : program .  (1)

	.  reduce 1


state 3
	program : program_body . main  (2)
	program_body : program_body . variable  (3)
	program_body : program_body . function  (4)

	VOID  shift 4
	CHAR  shift 5
	DOUBLE  shift 6
	INT  shift 7
	STRUCT  shift 8
	.  error

	main  goto 9
	variable  goto 10
	function  goto 11
	typed_function  goto 12
	void_function  goto 13
	built_in_type  goto 14
	struct  goto 15
	array_creation  goto 16


state 4
	void_function : VOID . ID '(' listOfParameters ')' '{' function_body '}'  (12)
	void_function : VOID . ID '(' ')' '{' function_body '}'  (13)
	main : VOID . MAIN '(' ')' '{' function_body '}'  (14)

	ID  shift 17
	MAIN  shift 18
	.  error


state 5
	built_in_type : CHAR .  (79)

	.  reduce 79


state 6
	built_in_type : DOUBLE .  (81)

	.  reduce 81


state 7
	built_in_type : INT .  (80)

	.  reduce 80


state 8
	struct : STRUCT . '{' listOfVariables '}'  (100)

	'{'  shift 19
	.  error


state 9
	program : program_body main .  (2)

	.  reduce 2


state 10
	program_body : program_body variable .  (3)

	.  reduce 3


state 11
	program_body : program_body function .  (4)

	.  reduce 4


state 12
	function : typed_function .  (6)

	.  reduce 6


state 13
	function : void_function .  (7)

	.  reduce 7


state 14
	typed_function : built_in_type . ID '(' listOfParameters ')' '{' function_body '}'  (10)
	typed_function : built_in_type . ID '(' ')' '{' function_body '}'  (11)
	array_creation : built_in_type . '[' INT_CONSTANT ']'  (84)
	variable : built_in_type . listOfIds ';'  (86)

	ID  shift 20
	'['  shift 21
	.  error

	listOfIds  goto 22


state 15
	array_creation : struct . '[' INT_CONSTANT ']'  (85)
	variable : struct . listOfIds ';'  (88)

	ID  shift 23
	'['  shift 24
	.  error

	listOfIds  goto 25


state 16
	array_creation : array_creation . '[' INT_CONSTANT ']'  (83)
	variable : array_creation . listOfIds ';'  (87)

	ID  shift 23
	'['  shift 26
	.  error

	listOfIds  goto 27


state 17
	void_function : VOID ID . '(' listOfParameters ')' '{' function_body '}'  (12)
	void_function : VOID ID . '(' ')' '{' function_body '}'  (13)

	'('  shift 28
	.  error


state 18
	main : VOID MAIN . '(' ')' '{' function_body '}'  (14)

	'('  shift 29
	.  error


state 19
	struct : STRUCT '{' . listOfVariables '}'  (100)
	listOfVariables : .  (90)

	.  reduce 90

	listOfVariables  goto 30


state 20
	typed_function : built_in_type ID . '(' listOfParameters ')' '{' function_body '}'  (10)
	typed_function : built_in_type ID . '(' ')' '{' function_body '}'  (11)
	listOfIds : ID .  (78)

	'('  shift 31
	','  reduce 78
	';'  reduce 78


state 21
	array_creation : built_in_type '[' . INT_CONSTANT ']'  (84)

	INT_CONSTANT  shift 32
	.  error


state 22
	listOfIds : listOfIds . ',' ID  (77)
	variable : built_in_type listOfIds . ';'  (86)

	','  shift 33
	';'  shift 34
	.  error


state 23
	listOfIds : ID .  (78)

	.  reduce 78


state 24
	array_creation : struct '[' . INT_CONSTANT ']'  (85)

	INT_CONSTANT  shift 35
	.  error


state 25
	listOfIds : listOfIds . ',' ID  (77)
	variable : struct listOfIds . ';'  (88)

	','  shift 33
	';'  shift 36
	.  error


state 26
	array_creation : array_creation '[' . INT_CONSTANT ']'  (83)

	INT_CONSTANT  shift 37
	.  error


state 27
	listOfIds : listOfIds . ',' ID  (77)
	variable : array_creation listOfIds . ';'  (87)

	','  shift 33
	';'  shift 38
	.  error


state 28
	void_function : VOID ID '(' . listOfParameters ')' '{' function_body '}'  (12)
	void_function : VOID ID '(' . ')' '{' function_body '}'  (13)

	CHAR  shift 5
	DOUBLE  shift 6
	INT  shift 7
	STRUCT  shift 8
	')'  shift 39
	.  error

	built_in_type  goto 40
	listOfParameters  goto 41
	parameter  goto 42
	struct  goto 43
	array_creation  goto 44


state 29
	main : VOID MAIN '(' . ')' '{' function_body '}'  (14)

	')'  shift 45
	.  error


state 30
	listOfVariables : listOfVariables . variable  (89)
	struct : STRUCT '{' listOfVariables . '}'  (100)

	CHAR  shift 5
	DOUBLE  shift 6
	INT  shift 7
	STRUCT  shift 8
	'}'  shift 46
	.  error

	variable  goto 47
	built_in_type  goto 48
	struct  goto 15
	array_creation  goto 16


state 31
	typed_function : built_in_type ID '(' . listOfParameters ')' '{' function_body '}'  (10)
	typed_function : built_in_type ID '(' . ')' '{' function_body '}'  (11)

	CHAR  shift 5
	DOUBLE  shift 6
	INT  shift 7
	STRUCT  shift 8
	')'  shift 49
	.  error

	built_in_type  goto 40
	listOfParameters  goto 50
	parameter  goto 42
	struct  goto 43
	array_creation  goto 44


state 32
	array_creation : built_in_type '[' INT_CONSTANT . ']'  (84)

	']'  shift 51
	.  error


state 33
	listOfIds : listOfIds ',' . ID  (77)

	ID  shift 52
	.  error


state 34
	variable : built_in_type listOfIds ';' .  (86)

	.  reduce 86


state 35
	array_creation : struct '[' INT_CONSTANT . ']'  (85)

	']'  shift 53
	.  error


state 36
	variable : struct listOfIds ';' .  (88)

	.  reduce 88


state 37
	array_creation : array_creation '[' INT_CONSTANT . ']'  (83)

	']'  shift 54
	.  error


state 38
	variable : array_creation listOfIds ';' .  (87)

	.  reduce 87


state 39
	void_function : VOID ID '(' ')' . '{' function_body '}'  (13)

	'{'  shift 55
	.  error


state 40
	parameter : built_in_type . ID  (20)
	array_creation : built_in_type . '[' INT_CONSTANT ']'  (84)

	ID  shift 56
	'['  shift 21
	.  error


state 41
	void_function : VOID ID '(' listOfParameters . ')' '{' function_body '}'  (12)
	listOfParameters : listOfParameters . ',' parameter  (18)

	')'  shift 57
	','  shift 58
	.  error


state 42
	listOfParameters : parameter .  (19)

	.  reduce 19


state 43
	parameter : struct . ID  (21)
	array_creation : struct . '[' INT_CONSTANT ']'  (85)

	ID  shift 59
	'['  shift 24
	.  error


state 44
	parameter : array_creation . ID  (22)
	array_creation : array_creation . '[' INT_CONSTANT ']'  (83)

	ID  shift 60
	'['  shift 26
	.  error


state 45
	main : VOID MAIN '(' ')' . '{' function_body '}'  (14)

	'{'  shift 61
	.  error


state 46
	struct : STRUCT '{' listOfVariables '}' .  (100)

	.  reduce 100


state 47
	listOfVariables : listOfVariables variable .  (89)

	.  reduce 89


state 48
	array_creation : built_in_type . '[' INT_CONSTANT ']'  (84)
	variable : built_in_type . listOfIds ';'  (86)

	ID  shift 23
	'['  shift 21
	.  error

	listOfIds  goto 22


state 49
	typed_function : built_in_type ID '(' ')' . '{' function_body '}'  (11)

	'{'  shift 62
	.  error


state 50
	typed_function : built_in_type ID '(' listOfParameters . ')' '{' function_body '}'  (10)
	listOfParameters : listOfParameters . ',' parameter  (18)

	')'  shift 63
	','  shift 58
	.  error


state 51
	array_creation : built_in_type '[' INT_CONSTANT ']' .  (84)

	.  reduce 84


state 52
	listOfIds : listOfIds ',' ID .  (77)

	.  reduce 77


state 53
	array_creation : struct '[' INT_CONSTANT ']' .  (85)

	.  reduce 85


state 54
	array_creation : array_creation '[' INT_CONSTANT ']' .  (83)

	.  reduce 83


state 55
	void_function : VOID ID '(' ')' '{' . function_body '}'  (13)
	listOfVariables : .  (90)

	.  reduce 90

	function_body  goto 64
	listOfVariables  goto 65


state 56
	parameter : built_in_type ID .  (20)

	.  reduce 20


state 57
	void_function : VOID ID '(' listOfParameters ')' . '{' function_body '}'  (12)

	'{'  shift 66
	.  error


state 58
	listOfParameters : listOfParameters ',' . parameter  (18)

	CHAR  shift 5
	DOUBLE  shift 6
	INT  shift 7
	STRUCT  shift 8
	.  error

	built_in_type  goto 40
	parameter  goto 67
	struct  goto 43
	array_creation  goto 44


state 59
	parameter : struct ID .  (21)

	.  reduce 21


state 60
	parameter : array_creation ID .  (22)

	.  reduce 22


state 61
	main : VOID MAIN '(' ')' '{' . function_body '}'  (14)
	listOfVariables : .  (90)

	.  reduce 90

	function_body  goto 68
	listOfVariables  goto 65


state 62
	typed_function : built_in_type ID '(' ')' '{' . function_body '}'  (11)
	listOfVariables : .  (90)

	.  reduce 90

	function_body  goto 69
	listOfVariables  goto 65


state 63
	typed_function : built_in_type ID '(' listOfParameters ')' . '{' function_body '}'  (10)

	'{'  shift 70
	.  error


state 64
	void_function : VOID ID '(' ')' '{' function_body . '}'  (13)

	'}'  shift 71
	.  error


state 65
	function_body : listOfVariables . listOfStatements  (15)
	listOfVariables : listOfVariables . variable  (89)
	listOfStatements : .  (17)

	CHAR  shift 5
	DOUBLE  shift 6
	INT  shift 7
	STRUCT  shift 8
	INT_CONSTANT  reduce 17
	CHAR_CONSTANT  reduce 17
	REAL_CONSTANT  reduce 17
	ID  reduce 17
	WRITE  reduce 17
	READ  reduce 17
	IF  reduce 17
	WHILE  reduce 17
	RETURN  reduce 17
	FOR  reduce 17
	DO  reduce 17
	SWITCH  reduce 17
	'!'  reduce 17
	'-'  reduce 17
	'('  reduce 17
	'}'  reduce 17

	variable  goto 47
	built_in_type  goto 48
	listOfStatements  goto 72
	struct  goto 15
	array_creation  goto 16


state 66
	void_function : VOID ID '(' listOfParameters ')' '{' . function_body '}'  (12)
	listOfVariables : .  (90)

	.  reduce 90

	function_body  goto 73
	listOfVariables  goto 65


state 67
	listOfParameters : listOfParameters ',' parameter .  (18)

	.  reduce 18


state 68
	main : VOID MAIN '(' ')' '{' function_body . '}'  (14)

	'}'  shift 74
	.  error


state 69
	typed_function : built_in_type ID '(' ')' '{' function_body . '}'  (11)

	'}'  shift 75
	.  error


state 70
	typed_function : built_in_type ID '(' listOfParameters ')' '{' . function_body '}'  (10)
	listOfVariables : .  (90)

	.  reduce 90

	function_body  goto 76
	listOfVariables  goto 65


state 71
	void_function : VOID ID '(' ')' '{' function_body '}' .  (13)

	.  reduce 13


state 72
	function_body : listOfVariables listOfStatements .  (15)
	listOfStatements : listOfStatements . statement  (16)

	INT_CONSTANT  shift 77
	CHAR_CONSTANT  shift 78
	REAL_CONSTANT  shift 79
	ID  shift 80
	WRITE  shift 81
	READ  shift 82
	IF  shift 83
	WHILE  shift 84
	RETURN  shift 85
	FOR  shift 86
	DO  shift 87
	SWITCH  shift 88
	'!'  shift 89
	'-'  shift 90
	'('  shift 91
	'}'  reduce 15

	function_invocation  goto 92
	statement  goto 93
	expression  goto 94
	read  goto 95
	write  goto 96
	if_else  goto 97
	while  goto 98
	for  goto 99
	switch  goto 100
	do_while  goto 101
	return  goto 102
	assignment  goto 103
	ternary  goto 104
	cast  goto 105
	array  goto 106


state 73
	void_function : VOID ID '(' listOfParameters ')' '{' function_body . '}'  (12)

	'}'  shift 107
	.  error


state 74
	main : VOID MAIN '(' ')' '{' function_body '}' .  (14)

	.  reduce 14


state 75
	typed_function : built_in_type ID '(' ')' '{' function_body '}' .  (11)

	.  reduce 11


state 76
	typed_function : built_in_type ID '(' listOfParameters ')' '{' function_body . '}'  (10)

	'}'  shift 108
	.  error


state 77
	expression : INT_CONSTANT .  (54)

	.  reduce 54


state 78
	expression : CHAR_CONSTANT .  (56)

	.  reduce 56


state 79
	expression : REAL_CONSTANT .  (55)

	.  reduce 55


state 80
	function_invocation : ID . '(' listOfExpressions ')'  (8)
	function_invocation : ID . '(' ')'  (9)
	expression : ID .  (57)

	'('  shift 109
	LEQ  reduce 57
	GEQ  reduce 57
	DOUBLEEQUALS  reduce 57
	DIFFERENT  reduce 57
	AND  reduce 57
	OR  reduce 57
	INC  reduce 57
	DEC  reduce 57
	DIVIDEEQUALS  reduce 57
	TIMESEQUALS  reduce 57
	MINUSEQUALS  reduce 57
	PLUSEQUALS  reduce 57
	'='  reduce 57
	'?'  reduce 57
	':'  reduce 57
	'>'  reduce 57
	'<'  reduce 57
	'+'  reduce 57
	'-'  reduce 57
	'*'  reduce 57
	'/'  reduce 57
	'%'  reduce 57
	'['  reduce 57
	']'  reduce 57
	'.'  reduce 57
	')'  reduce 57
	','  reduce 57
	';'  reduce 57


state 81
	write : WRITE . listOfExpressions  (99)

	INT_CONSTANT  shift 77
	CHAR_CONSTANT  shift 78
	REAL_CONSTANT  shift 79
	ID  shift 80
	'!'  shift 89
	'-'  shift 90
	'('  shift 91
	.  error

	function_invocation  goto 92
	listOfExpressions  goto 110
	expression  goto 111
	assignment  goto 103
	ternary  goto 104
	cast  goto 105
	array  goto 106


state 82
	read : READ . listOfExpressions  (98)

	INT_CONSTANT  shift 77
	CHAR_CONSTANT  shift 78
	REAL_CONSTANT  shift 79
	ID  shift 80
	'!'  shift 89
	'-'  shift 90
	'('  shift 91
	.  error

	function_invocation  goto 92
	listOfExpressions  goto 112
	expression  goto 111
	assignment  goto 103
	ternary  goto 104
	cast  goto 105
	array  goto 106


state 83
	if_else : IF . '(' expression ')' body ELSE body  (58)
	if_else : IF . '(' expression ')' body  (59)

	'('  shift 113
	.  error


state 84
	while : WHILE . '(' expression ')' body  (63)

	'('  shift 114
	.  error


state 85
	return : RETURN . expression  (101)

	INT_CONSTANT  shift 77
	CHAR_CONSTANT  shift 78
	REAL_CONSTANT  shift 79
	ID  shift 80
	'!'  shift 89
	'-'  shift 90
	'('  shift 91
	.  error

	function_invocation  goto 92
	expression  goto 115
	assignment  goto 103
	ternary  goto 104
	cast  goto 105
	array  goto 106


state 86
	for : FOR . '(' statement expression ';' assignment ')' body  (65)

	'('  shift 116
	.  error


state 87
	do_while : DO . body WHILE '(' expression ')'  (64)

	INT_CONSTANT  shift 77
	CHAR_CONSTANT  shift 78
	REAL_CONSTANT  shift 79
	ID  shift 80
	WRITE  shift 81
	READ  shift 82
	IF  shift 83
	WHILE  shift 84
	RETURN  shift 85
	FOR  shift 86
	DO  shift 87
	SWITCH  shift 88
	'!'  shift 89
	'-'  shift 90
	'('  shift 91
	'{'  shift 117
	.  error

	function_invocation  goto 92
	statement  goto 118
	expression  goto 94
	read  goto 95
	write  goto 96
	if_else  goto 97
	while  goto 98
	for  goto 99
	switch  goto 100
	do_while  goto 101
	return  goto 102
	assignment  goto 103
	ternary  goto 104
	cast  goto 105
	array  goto 106
	body  goto 119


state 88
	switch : SWITCH . '(' expression ')' '{' switch_body '}'  (66)

	'('  shift 120
	.  error


state 89
	expression : '!' . expression  (48)

	INT_CONSTANT  shift 77
	CHAR_CONSTANT  shift 78
	REAL_CONSTANT  shift 79
	ID  shift 80
	'!'  shift 89
	'-'  shift 90
	'('  shift 91
	.  error

	function_invocation  goto 92
	expression  goto 121
	assignment  goto 103
	ternary  goto 104
	cast  goto 105
	array  goto 106


state 90
	expression : '-' . expression  (47)

	INT_CONSTANT  shift 77
	CHAR_CONSTANT  shift 78
	REAL_CONSTANT  shift 79
	ID  shift 80
	'!'  shift 89
	'-'  shift 90
	'('  shift 91
	.  error

	function_invocation  goto 92
	expression  goto 122
	assignment  goto 103
	ternary  goto 104
	cast  goto 105
	array  goto 106


state 91
	expression : '(' . expression ')'  (50)
	cast : '(' . built_in_type ')' expression  (74)

	INT_CONSTANT  shift 77
	CHAR_CONSTANT  shift 78
	REAL_CONSTANT  shift 79
	ID  shift 80
	CHAR  shift 5
	DOUBLE  shift 6
	INT  shift 7
	'!'  shift 89
	'-'  shift 90
	'('  shift 91
	.  error

	function_invocation  goto 92
	built_in_type  goto 123
	expression  goto 124
	assignment  goto 103
	ternary  goto 104
	cast  goto 105
	array  goto 106


state 92
	expression : function_invocation .  (49)

	.  reduce 49


state 93
	listOfStatements : listOfStatements statement .  (16)

	.  reduce 16


state 94
	statement : expression . ';'  (23)
	expression : expression . '+' expression  (32)
	expression : expression . '*' expression  (33)
	expression : expression . '/' expression  (34)
	expression : expression . '-' expression  (35)
	expression : expression . '%' expression  (36)
	expression : expression . DOUBLEEQUALS expression  (39)
	expression : expression . '>' expression  (40)
	expression : expression . GEQ expression  (41)
	expression : expression . '<' expression  (42)
	expression : expression . LEQ expression  (43)
	expression : expression . DIFFERENT expression  (44)
	expression : expression . AND expression  (45)
	expression : expression . OR expression  (46)
	expression : expression . '.' expression  (51)
	ternary : expression . '?' expression ':' expression  (60)
	array : expression . '[' expression ']'  (82)
	assignment : expression . '=' expression  (91)
	assignment : expression . INC  (92)
	assignment : expression . DEC  (93)
	assignment : expression . PLUSEQUALS expression  (94)
	assignment : expression . MINUSEQUALS expression  (95)
	assignment : expression . TIMESEQUALS expression  (96)
	assignment : expression . DIVIDEEQUALS expression  (97)

	LEQ  shift 125
	GEQ  shift 126
	DOUBLEEQUALS  shift 127
	DIFFERENT  shift 128
	AND  shift 129
	OR  shift 130
	INC  shift 131
	DEC  shift 132
	DIVIDEEQUALS  shift 133
	TIMESEQUALS  shift 134
	MINUSEQUALS  shift 135
	PLUSEQUALS  shift 136
	'='  shift 137
	'?'  shift 138
	'>'  shift 139
	'<'  shift 140
	'+'  shift 141
	'-'  shift 142
	'*'  shift 143
	'/'  shift 144
	'%'  shift 145
	'['  shift 146
	'.'  shift 147
	';'  shift 148
	.  error


state 95
	statement : read . ';'  (24)

	';'  shift 149
	.  error


state 96
	statement : write . ';'  (25)

	';'  shift 150
	.  error


state 97
	statement : if_else .  (26)

	.  reduce 26


state 98
	statement : while .  (27)

	.  reduce 27


state 99
	statement : for .  (28)

	.  reduce 28


state 100
	statement : switch .  (29)

	.  reduce 29


state 101
	statement : do_while .  (30)

	.  reduce 30


state 102
	statement : return . ';'  (31)

	';'  shift 151
	.  error


state 103
	expression : assignment .  (37)

	.  reduce 37


state 104
	expression : ternary .  (38)

	.  reduce 38


state 105
	expression : cast .  (52)

	.  reduce 52


state 106
	expression : array .  (53)

	.  reduce 53


state 107
	void_function : VOID ID '(' listOfParameters ')' '{' function_body '}' .  (12)

	.  reduce 12


state 108
	typed_function : built_in_type ID '(' listOfParameters ')' '{' function_body '}' .  (10)

	.  reduce 10


state 109
	function_invocation : ID '(' . listOfExpressions ')'  (8)
	function_invocation : ID '(' . ')'  (9)

	INT_CONSTANT  shift 77
	CHAR_CONSTANT  shift 78
	REAL_CONSTANT  shift 79
	ID  shift 80
	'!'  shift 89
	'-'  shift 90
	'('  shift 91
	')'  shift 152
	.  error

	function_invocation  goto 92
	listOfExpressions  goto 153
	expression  goto 111
	assignment  goto 103
	ternary  goto 104
	cast  goto 105
	array  goto 106


state 110
	listOfExpressions : listOfExpressions . ',' expression  (75)
	write : WRITE listOfExpressions .  (99)

	','  shift 154
	';'  reduce 99


state 111
	expression : expression . '+' expression  (32)
	expression : expression . '*' expression  (33)
	expression : expression . '/' expression  (34)
	expression : expression . '-' expression  (35)
	expression : expression . '%' expression  (36)
	expression : expression . DOUBLEEQUALS expression  (39)
	expression : expression . '>' expression  (40)
	expression : expression . GEQ expression  (41)
	expression : expression . '<' expression  (42)
	expression : expression . LEQ expression  (43)
	expression : expression . DIFFERENT expression  (44)
	expression : expression . AND expression  (45)
	expression : expression . OR expression  (46)
	expression : expression . '.' expression  (51)
	ternary : expression . '?' expression ':' expression  (60)
	listOfExpressions : expression .  (76)
	array : expression . '[' expression ']'  (82)
	assignment : expression . '=' expression  (91)
	assignment : expression . INC  (92)
	assignment : expression . DEC  (93)
	assignment : expression . PLUSEQUALS expression  (94)
	assignment : expression . MINUSEQUALS expression  (95)
	assignment : expression . TIMESEQUALS expression  (96)
	assignment : expression . DIVIDEEQUALS expression  (97)

	LEQ  shift 125
	GEQ  shift 126
	DOUBLEEQUALS  shift 127
	DIFFERENT  shift 128
	AND  shift 129
	OR  shift 130
	INC  shift 131
	DEC  shift 132
	DIVIDEEQUALS  shift 133
	TIMESEQUALS  shift 134
	MINUSEQUALS  shift 135
	PLUSEQUALS  shift 136
	'='  shift 137
	'?'  shift 138
	'>'  shift 139
	'<'  shift 140
	'+'  shift 141
	'-'  shift 142
	'*'  shift 143
	'/'  shift 144
	'%'  shift 145
	'['  shift 146
	'.'  shift 147
	')'  reduce 76
	','  reduce 76
	';'  reduce 76


state 112
	listOfExpressions : listOfExpressions . ',' expression  (75)
	read : READ listOfExpressions .  (98)

	','  shift 154
	';'  reduce 98


state 113
	if_else : IF '(' . expression ')' body ELSE body  (58)
	if_else : IF '(' . expression ')' body  (59)

	INT_CONSTANT  shift 77
	CHAR_CONSTANT  shift 78
	REAL_CONSTANT  shift 79
	ID  shift 80
	'!'  shift 89
	'-'  shift 90
	'('  shift 91
	.  error

	function_invocation  goto 92
	expression  goto 155
	assignment  goto 103
	ternary  goto 104
	cast  goto 105
	array  goto 106


state 114
	while : WHILE '(' . expression ')' body  (63)

	INT_CONSTANT  shift 77
	CHAR_CONSTANT  shift 78
	REAL_CONSTANT  shift 79
	ID  shift 80
	'!'  shift 89
	'-'  shift 90
	'('  shift 91
	.  error

	function_invocation  goto 92
	expression  goto 156
	assignment  goto 103
	ternary  goto 104
	cast  goto 105
	array  goto 106


state 115
	expression : expression . '+' expression  (32)
	expression : expression . '*' expression  (33)
	expression : expression . '/' expression  (34)
	expression : expression . '-' expression  (35)
	expression : expression . '%' expression  (36)
	expression : expression . DOUBLEEQUALS expression  (39)
	expression : expression . '>' expression  (40)
	expression : expression . GEQ expression  (41)
	expression : expression . '<' expression  (42)
	expression : expression . LEQ expression  (43)
	expression : expression . DIFFERENT expression  (44)
	expression : expression . AND expression  (45)
	expression : expression . OR expression  (46)
	expression : expression . '.' expression  (51)
	ternary : expression . '?' expression ':' expression  (60)
	array : expression . '[' expression ']'  (82)
	assignment : expression . '=' expression  (91)
	assignment : expression . INC  (92)
	assignment : expression . DEC  (93)
	assignment : expression . PLUSEQUALS expression  (94)
	assignment : expression . MINUSEQUALS expression  (95)
	assignment : expression . TIMESEQUALS expression  (96)
	assignment : expression . DIVIDEEQUALS expression  (97)
	return : RETURN expression .  (101)

	LEQ  shift 125
	GEQ  shift 126
	DOUBLEEQUALS  shift 127
	DIFFERENT  shift 128
	AND  shift 129
	OR  shift 130
	INC  shift 131
	DEC  shift 132
	DIVIDEEQUALS  shift 133
	TIMESEQUALS  shift 134
	MINUSEQUALS  shift 135
	PLUSEQUALS  shift 136
	'='  shift 137
	'?'  shift 138
	'>'  shift 139
	'<'  shift 140
	'+'  shift 141
	'-'  shift 142
	'*'  shift 143
	'/'  shift 144
	'%'  shift 145
	'['  shift 146
	'.'  shift 147
	';'  reduce 101


state 116
	for : FOR '(' . statement expression ';' assignment ')' body  (65)

	INT_CONSTANT  shift 77
	CHAR_CONSTANT  shift 78
	REAL_CONSTANT  shift 79
	ID  shift 80
	WRITE  shift 81
	READ  shift 82
	IF  shift 83
	WHILE  shift 84
	RETURN  shift 85
	FOR  shift 86
	DO  shift 87
	SWITCH  shift 88
	'!'  shift 89
	'-'  shift 90
	'('  shift 91
	.  error

	function_invocation  goto 92
	statement  goto 157
	expression  goto 94
	read  goto 95
	write  goto 96
	if_else  goto 97
	while  goto 98
	for  goto 99
	switch  goto 100
	do_while  goto 101
	return  goto 102
	assignment  goto 103
	ternary  goto 104
	cast  goto 105
	array  goto 106


state 117
	body : '{' . listOfStatements '}'  (61)
	listOfStatements : .  (17)

	.  reduce 17

	listOfStatements  goto 158


state 118
	body : statement .  (62)

	.  reduce 62


state 119
	do_while : DO body . WHILE '(' expression ')'  (64)

	WHILE  shift 159
	.  error


state 120
	switch : SWITCH '(' . expression ')' '{' switch_body '}'  (66)

	INT_CONSTANT  shift 77
	CHAR_CONSTANT  shift 78
	REAL_CONSTANT  shift 79
	ID  shift 80
	'!'  shift 89
	'-'  shift 90
	'('  shift 91
	.  error

	function_invocation  goto 92
	expression  goto 160
	assignment  goto 103
	ternary  goto 104
	cast  goto 105
	array  goto 106


state 121
	expression : expression . '+' expression  (32)
	expression : expression . '*' expression  (33)
	expression : expression . '/' expression  (34)
	expression : expression . '-' expression  (35)
	expression : expression . '%' expression  (36)
	expression : expression . DOUBLEEQUALS expression  (39)
	expression : expression . '>' expression  (40)
	expression : expression . GEQ expression  (41)
	expression : expression . '<' expression  (42)
	expression : expression . LEQ expression  (43)
	expression : expression . DIFFERENT expression  (44)
	expression : expression . AND expression  (45)
	expression : expression . OR expression  (46)
	expression : '!' expression .  (48)
	expression : expression . '.' expression  (51)
	ternary : expression . '?' expression ':' expression  (60)
	array : expression . '[' expression ']'  (82)
	assignment : expression . '=' expression  (91)
	assignment : expression . INC  (92)
	assignment : expression . DEC  (93)
	assignment : expression . PLUSEQUALS expression  (94)
	assignment : expression . MINUSEQUALS expression  (95)
	assignment : expression . TIMESEQUALS expression  (96)
	assignment : expression . DIVIDEEQUALS expression  (97)

	LEQ  shift 125
	GEQ  shift 126
	DOUBLEEQUALS  shift 127
	DIFFERENT  shift 128
	'>'  shift 139
	'<'  shift 140
	'+'  shift 141
	'-'  shift 142
	'*'  shift 143
	'/'  shift 144
	'%'  shift 145
	'['  shift 146
	'.'  shift 147
	AND  reduce 48
	OR  reduce 48
	INC  reduce 48
	DEC  reduce 48
	DIVIDEEQUALS  reduce 48
	TIMESEQUALS  reduce 48
	MINUSEQUALS  reduce 48
	PLUSEQUALS  reduce 48
	'='  reduce 48
	'?'  reduce 48
	':'  reduce 48
	']'  reduce 48
	')'  reduce 48
	','  reduce 48
	';'  reduce 48

